# air-monitor

./: .gitmodules  CMakeLists.txt  README.md
src/: colormap.cpp  colormap.h  main.cpp  mqttdatacollector.cpp  mqttdatacollector.h  traywidget.cpp  traywidget.h
